force-app/main/default/objects/TV_Serie__c/fields/Expired_date__c.field-meta.xml
<CustomField>
    <fullName>Expired_date__c</fullName>
    <label>Expired date</label>
    <type>Date</type>
</CustomField>