force-app/main/default/objects/TV_Serie__c/fields/Only_for_adults__c.field-meta.xml
<CustomField>
    <fullName>Only_for_adults__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the film should not be available to minors.</description>
    <label>Only for adults</label>
    <type>Checkbox</type>
</CustomField>