force-app/main/default/objects/TV_Serie__c/fields/Trailer__c.field-meta.xml
<CustomField>
    <fullName>Trailer__c</fullName>
    <label>Trailer</label>
    <type>Url</type>
</CustomField>