force-app/main/default/objects/TV_Serie__c/validationRules/ExpiredDataMustBeGreaterThanTodayDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ExpiredDataMustBeGreaterThanTodayDate</fullName>
    <active>true</active>
    <errorConditionFormula>Expired_date__c   &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Expired_date__c</errorDisplayField>
    <errorMessage>Expired date cannot be a date that has already passed.</errorMessage>
</ValidationRule>