force-app/main/default/objects/TV_Serie__c/validationRules/LogoURL.validationRule-meta.xml
<ValidationRule>
    <fullName>LogoURL</fullName>
    <active>true</active>
    <description>Logo should be URL.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK( Logo__c )), 
     NOT(REGEX( Logo__c ,&quot;^https?://[\\w\\-.]+(\\.[a-z]{2,}){1,2}([/?].*)?$&quot;)))</errorConditionFormula>
    <errorDisplayField>Logo__c</errorDisplayField>
    <errorMessage>Incorrect URL.</errorMessage>
</ValidationRule>