force-app/main/default/objects/TV_Serie__c/validationRules/TrailerURL.validationRule-meta.xml
<ValidationRule>
    <fullName>TrailerURL</fullName>
    <active>true</active>
    <description>Trailer must be URL.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK( Trailer__c )),
NOT(REGEX( Trailer__c ,&quot;^https?://[\\w\\-.]+(\\.[a-z]{2,}){1,2}([/?].*)?$&quot;)))</errorConditionFormula>
    <errorDisplayField>Trailer__c</errorDisplayField>
    <errorMessage>Incorrect URL.</errorMessage>
</ValidationRule>