force-app/main/default/objects/TV_Serie__c/validationRules/UniqueTVSerieName.validationRule-meta.xml
<ValidationRule>
    <fullName>UniqueTVSerieName</fullName>
    <active>true</active>
    <description>TV Serie Name must be unique</description>
    <errorConditionFormula>AND(
   ISCHANGED(Name),
   VLOOKUP( $ObjectType.TV_Serie__c.Fields.Name, 
   $ObjectType.TV_Serie__c.Fields.Name, Name) &lt;&gt; NULL
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>TV serie with this name already exists.</errorMessage>
</ValidationRule>