force-app/main/default/objects/TV_Serie__c/listViews/Latest.listView-meta.xml
<ListView>
    <fullName>Latest</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:1</value>
    </filters>
    <label>Latest</label>
</ListView>